Refactoring some wrong code 2

--- a/RunDetectors.ipynb
+++ b/RunDetectors.ipynb
@@ -110,15 +110,17 @@
    ],
    "source": [
     "table = pd.DataFrame(index=[datasets])\n",
-    "window_size = 300 #window parameter to build the images for comparison\n",
-    "train_size = 300\n",
+    "window_size =  300#window parameter to build the images for comparison\n",
+    "train_size = 1000\n",
     "table"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -126,23 +128,309 @@
      "text": [
       "Dataset: AedesQuinx.test.\n",
       "IKS Running...\n",
-      "classle 1/5700 - drifts: []\n",
-      "1    300\n",
-      "Name: count, dtype: int64\n",
-      "[1.0, 0.0]\n",
+      "[1.0, 0.0]5000 - drifts: []\n",
       "[1, 0]\n",
       "[1, 0]\n",
       "[1.0, 0.0]\n",
       "{'CC': [1.0, 0.0], 'ACC': [1, 0], 'MS': [1, 0], 'DyS': [1.0, 0.0]}\n",
       "class\n",
-      "1    1.0\n",
+      "1    0.996667\n",
+      "0    0.003333\n",
       "Name: proportion, dtype: float64\n",
       "   IKS  IKS-CC  IKS-ACC  IKS-MS  IKS-DyS\n",
       "0  1.0     1.0      1.0     1.0      1.0\n",
-      "classle 2/5700 - drifts: []\n",
-      "1    300\n",
-      "Name: count, dtype: int64\n",
-      "[1.0, 0.0]\n"
+      "[1.0, 0.0]5000 - drifts: []\n",
+      "[1, 0]\n",
+      "[1, 0]\n",
+      "[1.0, 0.0]\n",
+      "{'CC': [1.0, 0.0], 'ACC': [1, 0], 'MS': [1, 0], 'DyS': [1.0, 0.0]}\n",
+      "class\n",
+      "1    0.993333\n",
+      "0    0.006667\n",
+      "Name: proportion, dtype: float64\n",
+      "    IKS  IKS-CC  IKS-ACC  IKS-MS  IKS-DyS\n",
+      "0  1.00    1.00     1.00    1.00     1.00\n",
+      "1  0.99    0.99     0.99    0.99     0.99\n",
+      "[1.0, 0.0]5000 - drifts: []\n",
+      "[1, 0]\n",
+      "[1, 0]\n",
+      "[1.0, 0.0]\n",
+      "{'CC': [1.0, 0.0], 'ACC': [1, 0], 'MS': [1, 0], 'DyS': [1.0, 0.0]}\n",
+      "class\n",
+      "1    0.99\n",
+      "0    0.01\n",
+      "Name: proportion, dtype: float64\n",
+      "    IKS  IKS-CC  IKS-ACC  IKS-MS  IKS-DyS\n",
+      "0  1.00    1.00     1.00    1.00     1.00\n",
+      "1  0.99    0.99     0.99    0.99     0.99\n",
+      "2  0.99    0.99     0.99    0.99     0.99\n",
+      "[1.0, 0.0]5000 - drifts: []\n",
+      "[1, 0]\n",
+      "[1, 0]\n",
+      "[1.0, 0.0]\n",
+      "{'CC': [1.0, 0.0], 'ACC': [1, 0], 'MS': [1, 0], 'DyS': [1.0, 0.0]}\n",
+      "class\n",
+      "1    0.986667\n",
+      "0    0.013333\n",
+      "Name: proportion, dtype: float64\n",
+      "    IKS  IKS-CC  IKS-ACC  IKS-MS  IKS-DyS\n",
+      "0  1.00    1.00     1.00    1.00     1.00\n",
+      "1  0.99    0.99     0.99    0.99     0.99\n",
+      "2  0.99    0.99     0.99    0.99     0.99\n",
+      "3  0.99    0.99     0.99    0.99     0.99\n",
+      "[1.0, 0.0]5000 - drifts: []\n",
+      "[1, 0]\n",
+      "[1, 0]\n",
+      "[1.0, 0.0]\n",
+      "{'CC': [1.0, 0.0], 'ACC': [1, 0], 'MS': [1, 0], 'DyS': [1.0, 0.0]}\n",
+      "class\n",
+      "1    0.983333\n",
+      "0    0.016667\n",
+      "Name: proportion, dtype: float64\n",
+      "    IKS  IKS-CC  IKS-ACC  IKS-MS  IKS-DyS\n",
+      "0  1.00    1.00     1.00    1.00     1.00\n",
+      "1  0.99    0.99     0.99    0.99     0.99\n",
+      "2  0.99    0.99     0.99    0.99     0.99\n",
+      "3  0.99    0.99     0.99    0.99     0.99\n",
+      "4  0.98    0.98     0.98    0.98     0.98\n",
+      "[1.0, 0.0]5000 - drifts: []\n",
+      "[1, 0]\n",
+      "[1, 0]\n",
+      "[1.0, 0.0]\n",
+      "{'CC': [1.0, 0.0], 'ACC': [1, 0], 'MS': [1, 0], 'DyS': [1.0, 0.0]}\n",
+      "class\n",
+      "1    0.98\n",
+      "0    0.02\n",
+      "Name: proportion, dtype: float64\n",
+      "    IKS  IKS-CC  IKS-ACC  IKS-MS  IKS-DyS\n",
+      "0  1.00    1.00     1.00    1.00     1.00\n",
+      "1  0.99    0.99     0.99    0.99     0.99\n",
+      "2  0.99    0.99     0.99    0.99     0.99\n",
+      "3  0.99    0.99     0.99    0.99     0.99\n",
+      "4  0.98    0.98     0.98    0.98     0.98\n",
+      "5  0.98    0.98     0.98    0.98     0.98\n",
+      "[1.0, 0.0]5000 - drifts: []\n",
+      "[1, 0]\n",
+      "[1, 0]\n",
+      "[1.0, 0.0]\n",
+      "{'CC': [1.0, 0.0], 'ACC': [1, 0], 'MS': [1, 0], 'DyS': [1.0, 0.0]}\n",
+      "class\n",
+      "1    0.976667\n",
+      "0    0.023333\n",
+      "Name: proportion, dtype: float64\n",
+      "    IKS  IKS-CC  IKS-ACC  IKS-MS  IKS-DyS\n",
+      "0  1.00    1.00     1.00    1.00     1.00\n",
+      "1  0.99    0.99     0.99    0.99     0.99\n",
+      "2  0.99    0.99     0.99    0.99     0.99\n",
+      "3  0.99    0.99     0.99    0.99     0.99\n",
+      "4  0.98    0.98     0.98    0.98     0.98\n",
+      "5  0.98    0.98     0.98    0.98     0.98\n",
+      "6  0.98    0.98     0.98    0.98     0.98\n",
+      "[1.0, 0.0]5000 - drifts: []\n",
+      "[1, 0]\n",
+      "[1, 0]\n",
+      "[1.0, 0.0]\n",
+      "{'CC': [1.0, 0.0], 'ACC': [1, 0], 'MS': [1, 0], 'DyS': [1.0, 0.0]}\n",
+      "class\n",
+      "1    0.973333\n",
+      "0    0.026667\n",
+      "Name: proportion, dtype: float64\n",
+      "    IKS  IKS-CC  IKS-ACC  IKS-MS  IKS-DyS\n",
+      "0  1.00    1.00     1.00    1.00     1.00\n",
+      "1  0.99    0.99     0.99    0.99     0.99\n",
+      "2  0.99    0.99     0.99    0.99     0.99\n",
+      "3  0.99    0.99     0.99    0.99     0.99\n",
+      "4  0.98    0.98     0.98    0.98     0.98\n",
+      "5  0.98    0.98     0.98    0.98     0.98\n",
+      "6  0.98    0.98     0.98    0.98     0.98\n",
+      "7  0.97    0.97     0.97    0.97     0.97\n",
+      "[1.0, 0.0]5000 - drifts: []\n",
+      "[1, 0]\n",
+      "[1, 0]\n",
+      "[1.0, 0.0]\n",
+      "{'CC': [1.0, 0.0], 'ACC': [1, 0], 'MS': [1, 0], 'DyS': [1.0, 0.0]}\n",
+      "class\n",
+      "1    0.97\n",
+      "0    0.03\n",
+      "Name: proportion, dtype: float64\n",
+      "    IKS  IKS-CC  IKS-ACC  IKS-MS  IKS-DyS\n",
+      "0  1.00    1.00     1.00    1.00     1.00\n",
+      "1  0.99    0.99     0.99    0.99     0.99\n",
+      "2  0.99    0.99     0.99    0.99     0.99\n",
+      "3  0.99    0.99     0.99    0.99     0.99\n",
+      "4  0.98    0.98     0.98    0.98     0.98\n",
+      "5  0.98    0.98     0.98    0.98     0.98\n",
+      "6  0.98    0.98     0.98    0.98     0.98\n",
+      "7  0.97    0.97     0.97    0.97     0.97\n",
+      "8  0.97    0.97     0.97    0.97     0.97\n",
+      "[1.0, 0.0]/5000 - drifts: []\n",
+      "[1, 0]\n",
+      "[1, 0]\n",
+      "[1.0, 0.0]\n",
+      "{'CC': [1.0, 0.0], 'ACC': [1, 0], 'MS': [1, 0], 'DyS': [1.0, 0.0]}\n",
+      "class\n",
+      "1    0.966667\n",
+      "0    0.033333\n",
+      "Name: proportion, dtype: float64\n",
+      "    IKS  IKS-CC  IKS-ACC  IKS-MS  IKS-DyS\n",
+      "0  1.00    1.00     1.00    1.00     1.00\n",
+      "1  0.99    0.99     0.99    0.99     0.99\n",
+      "2  0.99    0.99     0.99    0.99     0.99\n",
+      "3  0.99    0.99     0.99    0.99     0.99\n",
+      "4  0.98    0.98     0.98    0.98     0.98\n",
+      "5  0.98    0.98     0.98    0.98     0.98\n",
+      "6  0.98    0.98     0.98    0.98     0.98\n",
+      "7  0.97    0.97     0.97    0.97     0.97\n",
+      "8  0.97    0.97     0.97    0.97     0.97\n",
+      "9  0.97    0.97     0.97    0.97     0.97\n",
+      "[1.0, 0.0]/5000 - drifts: []\n",
+      "[1, 0]\n",
+      "[1, 0]\n",
+      "[1.0, 0.0]\n",
+      "{'CC': [1.0, 0.0], 'ACC': [1, 0], 'MS': [1, 0], 'DyS': [1.0, 0.0]}\n",
+      "class\n",
+      "1    0.963333\n",
+      "0    0.036667\n",
+      "Name: proportion, dtype: float64\n",
+      "     IKS  IKS-CC  IKS-ACC  IKS-MS  IKS-DyS\n",
+      "0   1.00    1.00     1.00    1.00     1.00\n",
+      "1   0.99    0.99     0.99    0.99     0.99\n",
+      "2   0.99    0.99     0.99    0.99     0.99\n",
+      "3   0.99    0.99     0.99    0.99     0.99\n",
+      "4   0.98    0.98     0.98    0.98     0.98\n",
+      "5   0.98    0.98     0.98    0.98     0.98\n",
+      "6   0.98    0.98     0.98    0.98     0.98\n",
+      "7   0.97    0.97     0.97    0.97     0.97\n",
+      "8   0.97    0.97     0.97    0.97     0.97\n",
+      "9   0.97    0.97     0.97    0.97     0.97\n",
+      "10  0.96    0.96     0.96    0.96     0.96\n",
+      "[1.0, 0.0]/5000 - drifts: []\n",
+      "[1, 0]\n",
+      "[1, 0]\n",
+      "[1.0, 0.0]\n",
+      "{'CC': [1.0, 0.0], 'ACC': [1, 0], 'MS': [1, 0], 'DyS': [1.0, 0.0]}\n",
+      "class\n",
+      "1    0.96\n",
+      "0    0.04\n",
+      "Name: proportion, dtype: float64\n",
+      "     IKS  IKS-CC  IKS-ACC  IKS-MS  IKS-DyS\n",
+      "0   1.00    1.00     1.00    1.00     1.00\n",
+      "1   0.99    0.99     0.99    0.99     0.99\n",
+      "2   0.99    0.99     0.99    0.99     0.99\n",
+      "3   0.99    0.99     0.99    0.99     0.99\n",
+      "4   0.98    0.98     0.98    0.98     0.98\n",
+      "5   0.98    0.98     0.98    0.98     0.98\n",
+      "6   0.98    0.98     0.98    0.98     0.98\n",
+      "7   0.97    0.97     0.97    0.97     0.97\n",
+      "8   0.97    0.97     0.97    0.97     0.97\n",
+      "9   0.97    0.97     0.97    0.97     0.97\n",
+      "10  0.96    0.96     0.96    0.96     0.96\n",
+      "11  0.96    0.96     0.96    0.96     0.96\n",
+      "[1.0, 0.0]/5000 - drifts: []\n",
+      "[1, 0]\n",
+      "[1, 0]\n",
+      "[1.0, 0.0]\n",
+      "{'CC': [1.0, 0.0], 'ACC': [1, 0], 'MS': [1, 0], 'DyS': [1.0, 0.0]}\n",
+      "class\n",
+      "1    0.956667\n",
+      "0    0.043333\n",
+      "Name: proportion, dtype: float64\n",
+      "     IKS  IKS-CC  IKS-ACC  IKS-MS  IKS-DyS\n",
+      "0   1.00    1.00     1.00    1.00     1.00\n",
+      "1   0.99    0.99     0.99    0.99     0.99\n",
+      "2   0.99    0.99     0.99    0.99     0.99\n",
+      "3   0.99    0.99     0.99    0.99     0.99\n",
+      "4   0.98    0.98     0.98    0.98     0.98\n",
+      "5   0.98    0.98     0.98    0.98     0.98\n",
+      "6   0.98    0.98     0.98    0.98     0.98\n",
+      "7   0.97    0.97     0.97    0.97     0.97\n",
+      "8   0.97    0.97     0.97    0.97     0.97\n",
+      "9   0.97    0.97     0.97    0.97     0.97\n",
+      "10  0.96    0.96     0.96    0.96     0.96\n",
+      "11  0.96    0.96     0.96    0.96     0.96\n",
+      "12  0.96    0.96     0.96    0.96     0.96\n",
+      "[1.0, 0.0]/5000 - drifts: []\n",
+      "[1, 0]\n",
+      "[1, 0]\n",
+      "[1.0, 0.0]\n",
+      "{'CC': [1.0, 0.0], 'ACC': [1, 0], 'MS': [1, 0], 'DyS': [1.0, 0.0]}\n",
+      "class\n",
+      "1    0.953333\n",
+      "0    0.046667\n",
+      "Name: proportion, dtype: float64\n",
+      "     IKS  IKS-CC  IKS-ACC  IKS-MS  IKS-DyS\n",
+      "0   1.00    1.00     1.00    1.00     1.00\n",
+      "1   0.99    0.99     0.99    0.99     0.99\n",
+      "2   0.99    0.99     0.99    0.99     0.99\n",
+      "3   0.99    0.99     0.99    0.99     0.99\n",
+      "4   0.98    0.98     0.98    0.98     0.98\n",
+      "5   0.98    0.98     0.98    0.98     0.98\n",
+      "6   0.98    0.98     0.98    0.98     0.98\n",
+      "7   0.97    0.97     0.97    0.97     0.97\n",
+      "8   0.97    0.97     0.97    0.97     0.97\n",
+      "9   0.97    0.97     0.97    0.97     0.97\n",
+      "10  0.96    0.96     0.96    0.96     0.96\n",
+      "11  0.96    0.96     0.96    0.96     0.96\n",
+      "12  0.96    0.96     0.96    0.96     0.96\n",
+      "13  0.95    0.95     0.95    0.95     0.95\n",
+      "[1.0, 0.0]/5000 - drifts: []\n",
+      "[1, 0]\n",
+      "[1, 0]\n",
+      "[1.0, 0.0]\n",
+      "{'CC': [1.0, 0.0], 'ACC': [1, 0], 'MS': [1, 0], 'DyS': [1.0, 0.0]}\n",
+      "class\n",
+      "1    0.95\n",
+      "0    0.05\n",
+      "Name: proportion, dtype: float64\n",
+      "     IKS  IKS-CC  IKS-ACC  IKS-MS  IKS-DyS\n",
+      "0   1.00    1.00     1.00    1.00     1.00\n",
+      "1   0.99    0.99     0.99    0.99     0.99\n",
+      "2   0.99    0.99     0.99    0.99     0.99\n",
+      "3   0.99    0.99     0.99    0.99     0.99\n",
+      "4   0.98    0.98     0.98    0.98     0.98\n",
+      "5   0.98    0.98     0.98    0.98     0.98\n",
+      "6   0.98    0.98     0.98    0.98     0.98\n",
+      "7   0.97    0.97     0.97    0.97     0.97\n",
+      "8   0.97    0.97     0.97    0.97     0.97\n",
+      "9   0.97    0.97     0.97    0.97     0.97\n",
+      "10  0.96    0.96     0.96    0.96     0.96\n",
+      "11  0.96    0.96     0.96    0.96     0.96\n",
+      "12  0.96    0.96     0.96    0.96     0.96\n",
+      "13  0.95    0.95     0.95    0.95     0.95\n",
+      "14  0.95    0.95     0.95    0.95     0.95\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.0, 0.0]/5000 - drifts: []\n",
+      "[1, 0]\n",
+      "[1, 0]\n",
+      "[1.0, 0.0]\n",
+      "{'CC': [1.0, 0.0], 'ACC': [1, 0], 'MS': [1, 0], 'DyS': [1.0, 0.0]}\n",
+      "class\n",
+      "1    0.946667\n",
+      "0    0.053333\n",
+      "Name: proportion, dtype: float64\n",
+      "     IKS  IKS-CC  IKS-ACC  IKS-MS  IKS-DyS\n",
+      "0   1.00    1.00     1.00    1.00     1.00\n",
+      "1   0.99    0.99     0.99    0.99     0.99\n",
+      "2   0.99    0.99     0.99    0.99     0.99\n",
+      "3   0.99    0.99     0.99    0.99     0.99\n",
+      "4   0.98    0.98     0.98    0.98     0.98\n",
+      "5   0.98    0.98     0.98    0.98     0.98\n",
+      "6   0.98    0.98     0.98    0.98     0.98\n",
+      "7   0.97    0.97     0.97    0.97     0.97\n",
+      "8   0.97    0.97     0.97    0.97     0.97\n",
+      "9   0.97    0.97     0.97    0.97     0.97\n",
+      "10  0.96    0.96     0.96    0.96     0.96\n",
+      "11  0.96    0.96     0.96    0.96     0.96\n",
+      "12  0.96    0.96     0.96    0.96     0.96\n",
+      "13  0.95    0.95     0.95    0.95     0.95\n",
+      "14  0.95    0.95     0.95    0.95     0.95\n",
+      "15  0.95    0.95     0.95    0.95     0.95\n",
+      "[1.0, 0.0]/5000 - drifts: []\n"
      ]
     }
    ],
@@ -173,7 +461,7 @@
     "        print(\"=======================\")\n",
     "            \n",
     "        table.loc[[file[:-4]], [detector]] = round(mean_acc)\n",
-    "table\n",
+    "tabled\n",
     "\n",
     "    "
    ]
